app/src/test/resources/programs/invalid/foreign/with_body.exe
foreign fun get_zero() -> Int = 0

fun main() -> Int {
    get_zero() 
}